assets/overlays/cluster2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: book-import
  name: book-import
  namespace: simple-app
spec:
  replicas: 3
