assets/overlays/cluster2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: simple-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/ssl-redirect: "true"
    #ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /apache
            backend:
              service: 
                name: httpd
                port: 
                  number: 8080
